# analyze-code

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  pyproject.toml
app/src/: calculate_recall_precission_fscore.py  clean_project_csv.py  clean_pylintrc.py  compute_cosine_similarity_table.py  create_correlation_matrix.py  create_dict.py  create_table.py  name_list.py  tracking_all_convention.py
app/src/utils/: __init__.py  calculate_cosin_similarity.py  clean_csv.py  get_file_name.py  tracking_convention.py
src/: __init__.py
src/SAT/: clean_pylintrc.py  create_dict.py  create_table.py
src/constants/: path.py
src/cosin/: __init__.py  all_convention.py  clean_project_csv.py  cleaning_csv.py  compute_cosine_similarity_table.py  correct_from_model.py  cosine_similarity_table.py  create_correlation_matrix.py  filter_data.py  tracking_all_convention.py
src/plot/: __init__.py  save_scatterplot.py
src/predict/: __init__.py  calculate_recall_precission_fscore.py  conventional_method.py  machine_learning_models.py  main.py  merge_method.py  model_creater.py  training_data.py
src/predict/modules/: __init__.py  merge_model.py  model_selection.py  single_model.py  white_list.py
src/utils/: __init__.py  calculate_cosin_similarity.py  clean_csv.py  cleaning_csv.py  compare_convention.py  dir_creater.py  extract_data.py  get_file_name.py  load_correction_data.py  name_list.py  tracking_convention.py  warning_counter.py  white_list.py
test/: test_cosin.py  test_plot.py  test_predict.py
