[tool.poetry]
name = "analyze-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = 'utils', from = 'src'},
    {include = 'constants', from = 'src'}
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
flake8 = "^7.0.0"
black = "^23.12.1"
scikit-learn = "^1.3.2"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
